<resources>
    <string name="app_name">Forecast Search</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">1052802311416765</string>
    <string name="state_prompt">Select a State</string>
    <string name="Forecast_Search">Forecast Search</string>
    <string name="Street">Street</string>
    <string name="City">City</string>
    <string name="State">State</string>
    <string name="Degree">Degree</string>
    <string name="Poweredby">Powered By:</string>
    <string name="Farenheit">Farenheit</string>
    <string name="Celsius">Celsius</string>
    <string name="Search">Search</string>
    <string name="Clear">Clear</string>
    <string name="About">About</string>
    <string-array name="state_arrays">
        <item>Select a State</item>
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>District Of Columbia</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="errorstreet">Please enter a Street Address.</string>
    <string name="errorcity">Please enter a City.</string>
    <string name="errorstate">Please select a State.</string>
    <string name="moredetails">MORE DETAILS</string>
    <string name="viewmap">VIEW MAP</string>
    <string name="precep">Precipitation</string>
    <string name="chanceofrain">Chance of Rain</string>
    <string name="windspeed">Wind Speed</string>
    <string name="dewpoint">Dew Point</string>
    <string name="humidity">Humidity</string>
    <string name="visibility">Visibility</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="next24">NEXT 24 HOURS</string>
    <string name="next7">NEXT 7 DAYS</string>
    <string name="time">Time</string>
    <string name="summary">Summary</string>
    <string name="temp">Temp</string>

</resources>
