<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/bg">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Forecast_Search"
        android:id="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="26sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Street"
        android:id="@+id/street"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:textColor="#000000"
        android:textSize="23sp"
        android:textIsSelectable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/City"
        android:id="@+id/city"
        android:layout_marginTop="22dp"
        android:textColor="#000000"
        android:layout_below="@+id/street"
        android:layout_alignParentStart="true"
        android:textSize="23sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/State"
        android:id="@+id/state"
        android:layout_below="@+id/city"
        android:layout_alignStart="@+id/city"
        android:layout_marginTop="21dp"
        android:textColor="#000000"
        android:textSize="23sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Degree"
        android:id="@+id/degreetext"
        android:layout_below="@+id/state"
        android:layout_marginTop="18dp"
        android:textColor="#000000"
        android:textSize="23sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/degree"
        android:orientation="horizontal"
        android:layout_alignTop="@+id/degreetext"
        android:layout_alignBottom="@+id/degreetext"
        android:layout_alignEnd="@+id/editText2"
        android:layout_toEndOf="@+id/degreetext"
        android:layout_alignStart="@+id/spinner">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Farenheit"
            android:id="@+id/farenheitradio"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Celsius"
            android:id="@+id/celsiusradio"
            android:checked="false" />

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Search"
        android:id="@+id/search"
        android:layout_below="@+id/degreetext"
        android:layout_alignStart="@+id/degreetext"
        android:layout_marginTop="18dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Clear"
        android:id="@+id/clear"
        android:layout_alignTop="@+id/search"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/About"
        android:id="@+id/about"
        android:gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/degree" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_above="@+id/city"
        android:layout_alignEnd="@+id/clear"
        android:layout_toEndOf="@+id/search" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:layout_above="@+id/state"
        android:layout_alignEnd="@+id/editText"
        android:layout_alignStart="@+id/editText" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:spinnerMode="dialog"
        android:entries="@array/state_arrays"
        android:layout_above="@+id/degreetext"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/state"
        android:layout_alignStart="@+id/editText2" />

    <ImageView
        android:layout_width="500dp"
        android:layout_height="350dp"
        android:id="@+id/forecastlogo"
        android:scaleType="fitCenter"
        android:gravity="bottom"
        android:src="@drawable/forecastlogo"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/clear"
        android:layout_below="@+id/textView4"
        android:layout_alignStart="@+id/clear" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Poweredby"
        android:id="@+id/textView4"
        android:textColor="#000000"
        android:layout_alignTop="@+id/about"
        android:layout_alignEnd="@+id/clear"
        android:textSize="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView5"
        android:layout_above="@+id/about"
        android:layout_marginBottom="26dp"
        android:layout_toStartOf="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/errormsg"
        android:layout_alignBottom="@+id/textView5"
        android:textColor="#ff0000"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:textSize="20sp" />

</RelativeLayout>
