<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.csci571.weatherforecast.forecastsearch.DetailsActivity">
<ScrollView android:layout_width="fill_parent"
android:layout_height="fill_parent">

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/moredetails"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:id="@+id/next24"
        android:layout_below="@+id/moredetails"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp"
        android:text="@string/next24"
        android:background="@drawable/custombuttonclicked"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:text="@string/next7"
        android:id="@+id/next7"
        android:layout_alignBottom="@+id/next24"
        android:layout_toEndOf="@+id/next24"
        android:layout_marginStart="26dp"
        android:background="@drawable/custombutton"/>
    <FrameLayout
        android:id="@+id/tabcontent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/next24"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:id="@+id/tab1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left|top">

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:id="@+id/next24table"
                android:stretchColumns="*"
                android:shrinkColumns="*"
                android:layout_marginTop="15dp">
                <TableRow  android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:paddingBottom="10dp"
                    android:background="@color/blue">
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/time"
                        android:id="@+id/precep"
                        android:textSize="20sp"
                        android:layout_column="0"
                        android:layout_gravity="left"
                        android:textColor="@color/gray2"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/summary"
                        android:id="@+id/summary"
                        android:layout_gravity="center"
                        android:layout_column="1"
                        android:textSize="20sp"
                        android:textColor="@color/gray2"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/temp"
                        android:id="@+id/temp"
                        android:layout_gravity="right"
                        android:layout_column="2"
                        android:textSize="20sp"
                        android:textColor="@color/gray2"
                        android:textStyle="bold"/>

                </TableRow>
            </TableLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/tab2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left|top">

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:id="@+id/next7table"
                android:stretchColumns="*"
                android:shrinkColumns="*"
                android:layout_marginTop="10dp">

            </TableLayout>
        </RelativeLayout>
    </FrameLayout>

</RelativeLayout>
</ScrollView>
    </RelativeLayout>