<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.csci571.weatherforecast.forecastsearch.ResultActivity" >
<ScrollView android:layout_width="fill_parent"
android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moredetails"
            android:id="@+id/moredetails"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            />
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viewmap"
            android:id="@+id/viewmap"
            android:layout_alignBottom="@+id/moredetails"
            android:layout_toEndOf="@+id/moredetails"
            android:layout_marginLeft="10dp" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fbicon"
            android:src="@drawable/fbicon"
            android:layout_alignBottom="@+id/viewmap"
            android:layout_toEndOf="@+id/viewmap"
            android:layout_alignParentTop="true" />
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imgsummary"
            android:src="@drawable/clear"
            android:layout_below="@+id/viewmap"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/fbicon"
            android:layout_marginTop="20dp"
            android:foregroundGravity="center" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/summary"
            android:gravity="center"
            android:textColor="#080808"
            android:textSize="25dp"
            android:textIsSelectable="true"
            android:layout_below="@+id/imgsummary"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/temp"
            android:textSize="35dp"
            android:gravity="center"
            android:layout_marginTop="19dp"
            android:layout_below="@+id/summary"
            android:layout_centerHorizontal="true"
            android:text="60" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/temphilo"
            android:layout_below="@+id/temp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:textIsSelectable="false"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp" />
        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/table"
            android:stretchColumns="1"
            android:layout_below="@+id/temphilo"
            android:layout_alignParentStart="true">
            <TableRow  android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/precep"
                    android:id="@+id/precep"
                    android:gravity="left" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Precipitation"
                    android:id="@+id/precepvalue"
                    android:gravity="right"
                    android:layout_column="6" />

            </TableRow>
            <TableRow  android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/chanceofrain"
                    android:id="@+id/chanceofrain"
                    android:gravity="left" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Precipitation"
                    android:id="@+id/chanceofrainvalue"
                    android:gravity="right"
                    android:layout_column="6" />

            </TableRow>
            <TableRow  android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/windspeed"
                    android:id="@+id/windspeed"
                    android:gravity="left" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Precipitation"
                    android:id="@+id/windspeedvalue"
                    android:gravity="right"
                    android:layout_column="6" />

            </TableRow>
            <TableRow  android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/dewpoint"
                    android:id="@+id/dewpoint"
                    android:gravity="left" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Precipitation"
                    android:id="@+id/dewpointvalue"
                    android:gravity="right"
                    android:layout_column="6" />

            </TableRow>
            <TableRow  android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/humidity"
                    android:id="@+id/humidity"
                    android:gravity="left" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Precipitation"
                    android:id="@+id/humidityvalue"
                    android:gravity="right"
                    android:layout_column="6" />

            </TableRow>
            <TableRow  android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/visibility"
                    android:id="@+id/visibility"
                    android:gravity="left" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Precipitation"
                    android:id="@+id/visibilityvalue"
                    android:gravity="right"
                    android:layout_column="6" />

            </TableRow>
            <TableRow  android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/sunrise"
                    android:id="@+id/sunrise"
                    android:gravity="left" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Precipitation"
                    android:id="@+id/sunrisevalue"
                    android:gravity="right"
                    android:layout_column="6" />

            </TableRow>
            <TableRow  android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/sunset"
                    android:id="@+id/sunset"
                    android:gravity="left" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Precipitation"
                    android:id="@+id/sunsetvalue"
                    android:gravity="right"
                    android:layout_column="6" />

            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/unit"
            android:layout_alignTop="@+id/temp"
            android:layout_toEndOf="@+id/temp"
            android:text="F" />

    </RelativeLayout>
</ScrollView>
</RelativeLayout>